<resources>
    <string name="app_name">Calculator Pro</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="matrix">Matrix</string>
    <string name="clear">C</string>
    <string name="brackets">()</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="delete">DEL</string>
    <string name="dot">.</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="nCr">nCr</string>
    <string name="nPr">nPr</string>
    <string name="factorial">!</string>
    <string name="deg">DEG</string>
    <string name="rad">RAD</string>
    <string name="comma">,</string>
    <string name="sum">sum</string>
    <string name="avg">avg</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="std">std</string>
    <string name="var">var</string>
    <string name="med">med</string>
    <string name="error">Error</string>
    <string name="error_div_zero">Div by 0</string>
    <string name="error_invalid">Invalid Input</string>
    <string name="matrix_mode">Matrix Mode</string>
    <string name="matrix_title">Matrix Calculator</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atan">atan</string>
    <string name="det_result">Det(A) = %s</string>
    <string name="error_det_zero">Error: Determinant is 0</string>
    <string name="error_incomplete_matrix">Error: Please fill all matrix cells</string>
    <string name="abs">abs</string>
    <string name="exp">exp</string>
    <string name="log2">log2</string>
    <string name="ceil">ceil</string>
    <string name="floor">floor</string>
    <string name="ans">Ans</string>
    <string name="rand">rand</string>
    <string name="inv">1/x</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="scientific">Scientific</string>
    <string name="basic">Basic</string>
    <string name="clear_history">Clear History</string>
    <string name="no_history">No history yet</string>
    <string name="statistics_title">Statistical Analysis</string>
    <string name="enter_data_hint">Enter numbers separated by commas</string>
    <string name="calculate">Calculate</string>
    <string name="mean">Mean:</string>
    <string name="median">Median:</string>
    <string name="mode">Mode:</string>
    <string name="q1">Q1 (25th):</string>
    <string name="q3">Q3 (75th):</string>
    <string name="iqr">IQR:</string>
    <string name="std_dev">Std Dev:</string>
    <string name="variance">Variance:</string>
    <string name="range">Range:</string>
    <string name="min_label">Min:</string>
    <string name="max_label">Max:</string>
    <string name="sum_label">Sum:</string>
    <string name="count_label">Count:</string>
    <string name="clear_data">Clear Data</string>
    <string name="example_data">Example</string>
    <string name="error_invalid_data">Error: Please enter valid numbers</string>
</resources>